--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -20,11 +20,11 @@ php_install_recommends: true
 php_enable_webserver: true
 
 # PHP-FPM configuration.
-php_enable_php_fpm: false
+php_enable_php_fpm: true
 php_fpm_state: started
 php_fpm_handler_state: restarted
 php_fpm_enabled_on_boot: true
-php_fpm_listen: "127.0.0.1:9000"
+php_fpm_listen: "/var/run/php-fpm/php-fpm.sock"
 php_fpm_listen_allowed_clients: "127.0.0.1"
 php_fpm_pm_max_children: 50
 php_fpm_pm_start_servers: 5
